// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Img tag renders error 1`] = `
<img
  alt="description"
  class="a1rj2wdy"
  decoding="async"
  loading="lazy"
  src="image.png"
  srcset="100w image-small.png"
  style="color: red; background-image: url(another.png);"
/>
`;

exports[`Img tag renders initial 1`] = `
<img
  alt="description"
  class="a1rj2wdy"
  decoding="async"
  loading="lazy"
  src="image.png"
  srcset="100w image-small.png"
  style="color: red; background-image: url(another.png);"
/>
`;

exports[`Img tag renders loaded 1`] = `
<img
  alt="description"
  class="acf3p1m"
  decoding="async"
  loading="lazy"
  src="image.png"
  srcset="100w image-small.png"
  style="color: red;"
/>
`;

exports[`Img tag renders manual 1`] = `
<img
  alt="description"
  class="a1rj2wdy"
  decoding="async"
  loading="lazy"
  src="image.png"
  srcset="100w image-small.png"
  style="color: red; background-image: url(another.png);"
/>
`;

exports[`Img tag renders offline 1`] = `
<img
  alt="description"
  class="a1rj2wdy"
  decoding="async"
  loading="lazy"
  src="image.png"
  srcset="100w image-small.png"
  style="color: red; background-image: url(another.png);"
/>
`;
